using System.Collections;
using UnityEngine;

internal class AnimationStrings
{
    internal static string isMoving = "isMoving";
    internal static string isGrounded = "isGrounded";
    internal static string yVelocity = "yVelocity";
    internal static string jump = "jump";
    internal static string isOnWall = "isOnWall";
    internal static string doubleJump = "doubleJump";
    internal static string isWallSliding = "isWallSliding";
    internal static string isHit = "isHit";
    internal static string explode = "explode";
    internal static string spawn = "spawn";
    internal static string death = "death";
    internal static string isCollected = "isCollected";
    internal static string startUp = "startUp";
    internal static string isActive = "isActive";
    internal static string meleeAttack = "meleeAttack";
    internal static string rangeAttack = "rangeAttack";
}